Ajustes de tamanos y accesibilidad parte 2

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 
   <main  role="main" class="order-summary_container">
     <figure class="box-hero--image">
-      <div role="img" class="hero-image"></div>
+      <div class="hero-image"></div>
     </figure>
   
-    <div role="contentinfo" class="order-summary_info">
+    <div class="order-summary_info">
       <h1>Order Summary</h1>
       <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
       device anywhere you like!</p>
     </div>
   
-    <div role="textbox" class="plans-info_container">
+    <div class="plans-info_container">
       <figure>
         <img src="./images/icon-music.svg" alt="">
       </figure>
-      <div role="textbox" class="plans-info_block">
+      <div class="plans-info_block">
         <h2 class="plans-info--title">Annual Plan</h2>
         <p class="plans-info--price">$59.99/year</p>
       </div>
