Fix de Semantica HTML, fix de margin collapsing, fix de centrado, mejora en estilos mas preciso al diseno

--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
 </head>
 <body>
 
-  <main  role="main" class="order-summary_container">
-    <figure class="box-hero--image">
-      <div class="hero-image"></div>
-    </figure>
-  
-    <div class="order-summary_info">
-      <h1>Order Summary</h1>
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
-      device anywhere you like!</p>
-    </div>
-  
-    <div class="plans-info_container">
-      <figure>
-        <img src="./images/icon-music.svg" alt="">
-      </figure>
-      <div class="plans-info_block">
-        <h2 class="plans-info--title">Annual Plan</h2>
-        <p class="plans-info--price">$59.99/year</p>
+  <main class="container">
+    <section  class="order-summary_container">
+      <div class="box-hero--image">
+        <div class="hero-image"></div>
       </div>
-      <a role="button" class="plans-info_button" href="/">Change</a>
-    </div>
-
-    <a role="button" class="button-payment" href="/">Proceed to Payment</a>
-    <a role="button" class="button-cancel" href="/">Cancel Order</a>
+    
+      <div class="order-summary_info">
+        <h1>Order Summary</h1>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+        device anywhere you like!</p>
+      </div>
+    
+      <div class="plans-info_container">
+        <div>
+          <img src="./images/icon-music.svg" alt="This is a music icon">
+        </div>
+        <div class="plans-info_block">
+          <h2 class="plans-info--title">Annual Plan</h2>
+          <p class="plans-info--price">$59.99/year</p>
+        </div>
+        <a role="button" class="plans-info_button" href="/">Change</a>
+      </div>
+  
+      <a role="button" class="button-payment" href="/">Proceed to Payment</a>
+      <a role="button" class="button-cancel" href="/">Cancel Order</a>
+    </section>
   </main>
 </body>
 </html>
