Fix de Semantica HTML, fix de margin collapsing, fix de centrado, mejora en estilos mas preciso al diseno part2

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <a role="button" class="plans-info_button" href="/">Change</a>
       </div>
   
-      <a role="button" class="button-payment" href="/">Proceed to Payment</a>
-      <a role="button" class="button-cancel" href="/">Cancel Order</a>
+      <a  class="button-payment" href="/">Proceed to Payment</a>
+      <a  class="button-cancel" href="/">Cancel Order</a>
     </section>
   </main>
 </body>
